Remove booking force override
